# TMR-2022-AutoModelCar

./: .gitignore
catkin_ws/: .gitignore
catkin_ws/src/dotMEX_Car/scripts/: 01_cpy.py  01_tmr_dotMEX_Car_FINAL.py
catkin_ws/src/nav_no_obstacles/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/nav_no_obstacles/src/: main.cpp
